broadcast: fixed kebab menu not showing up

--- a/public/css/broadcast.css
+++ b/public/css/broadcast.css
@@ -104,6 +104,10 @@
     max-height: 60vh;
 }
 
+#auto-alerts-table tr {
+    position: relative;
+}
+
 #automated-alerts-header{
     background-color: #9A0000;
 }
